# scheduler_memoire_c

./: .gitignore  CMakeLists.txt  Makefile  README.md  Sans titre.txt  Stack.txt  assembly.s  blink.c  config.h  demo.sh  kernel.c  lib.rs  main.c  outpout  plot.py  process.h  scheduler.c  scheduler.h  task.c  task.h
plot/: plot.py  plot_act.py
rust_lib/: Cargo.toml
rust_lib/.cargo/: config
rust_lib/src/: main.rs
src/: config.h  kernel.c  scheduler.c  scheduler.h
